# chitey

./: .gitignore  Cargo.toml  README.md
chitey/: Cargo.toml
chitey-codegen/: Cargo.toml  README.md
chitey-codegen/src/: lib.rs  route.rs
chitey-router/: Cargo.toml
chitey-router/src/: handler.rs  lib.rs  path.rs  resource.rs
chitey-server/: Cargo.toml
chitey-server/src/: fn_service.rs  guard.rs  lib.rs  process.rs  resource.rs  tuple.rs  web_server.rs
chitey-server/src/response/: mod.rs  response.rs
chitey-server/src/server/: http3_server.rs  http3_stream_wrapper.rs  http_server.rs  https_server.rs  mod.rs  util.rs
chitey/src/: lib.rs  memo.rs
chitey/src/server/: mod.rs
examples/: Cargo.toml  README.md
examples/src/: main.rs
src/: lib.rs  proc_macro_attribute.rs  process.rs
src/server/: http3_stream_wrapper.rs  http_server.rs  https_server.rs  servers.rs
