# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "chitey",
  "chitey-codegen",
  "chitey-router",
  "chitey-server",
  "examples",
]
exclude = []

[workspace.package]
license = "MIT"
edition = "2021"
rust-version = "1.72"
