# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["chitey", "chitey-codegen", "chitey-router", "chitey-server"]
exclude = ["examples"]

[workspace.package]
license = "MIT"
edition = "2021"
rust-version = "1.64"
version = "0.2.4"

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1.32", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "io-std",
  "fs",
  "time",
  "full",
] }
urlpattern = "0.2"
