[package]
name = "chitey-codegen"
version = "0.1.0"
description = "Routing macros for Chitey"
edition = "2021"
repository = "https://github.com/oligami-0424/chitey.git"
authors = ["oligami <nziq53@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
# chitey-router = "0.1"
