[package]
name = "chitey-codegen"
version = "0.1.0"
description = "Routing macros for Chitey"
repository = "https://github.com/oligami-0424/chitey.git"
authors = ["oligami <nziq53@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# chitey-router = "0.1"
chitey-router = { path = "../chitey-router" }
