[package]
name = "chitey-codegen"
description = "Routing macros for Chitey"
repository = "https://github.com/oligami-0424/chitey.git"
authors = ["oligami <nziq53@gmail.com>"]
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# chitey-router = "0.2"
chitey-router = { path = "../chitey-router" }
async-trait.workspace = true
