[package]
name = "chitey-router"
version = "0.1.0"
description = "Routing Chitey"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository = "https://github.com/oligami-0424/chitey.git"
authors = ["oligami <nziq53@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlpattern = "0.2"
once_cell = "1.18"
http = "0.2"
bytes = "1.5"
derive_more = "0.99"
