[package]
name = "chitey-server"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description = "chitey framework on this chitey-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = [
    "server",
    "http1",
    "http2",
    "stream",
    "runtime",
] }
mpart-async = "0.6"
chrono = "0.4"
h3 = "0.0.2"
h3-quinn = "0.0.3"
bytes = "1"
mime = "0.3"
rustls = { version = "0.21" }
futures-util = "0.3"
tokio-rustls = "0.24"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rustls-pemfile = "1.0"
derive_more = "0.99"
# impl-trait-for-tuples = "0.2"
async-trait.workspace = true
tokio.workspace = true
urlpattern.workspace = true
thiserror = "1.0"
tracing = "0.1"

# [target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

# [target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
