[package]
name = "chitey"
version = "0.1.3"
authors = ["oligami <nziq53@gmail.com>", "nicomiu404", "Ackky2424"]
description = "Http3 and Https low layer server framework on hyper and h3"
repository = "https://github.com/oligami-0424/chitey.git"
categories = [
  "web-programming::http-server",
  "asynchronous",
  "network-programming",
]
keywords = ["http3", "http", "web", "chitey", "framework"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "chitey"
path = "src/lib.rs"

[dependencies]
# chitey-codegen = "0.1"
chitey-codegen = { path = "../chitey-codegen" }
chitey-router = { path = "../chitey-router" }
chitey-server = { path = "../chitey-server" }
async-trait.workspace = true
urlpattern.workspace = true

[features]
macros = []
