[package]
name = "chitey"
authors = ["oligami <nziq53@gmail.com>", "nicomiu404", "Ackky2424"]
description = "Http3 and Https low layer server framework on hyper and h3"
repository = "https://github.com/oligami-0424/chitey.git"
categories = [
  "web-programming::http-server",
  "asynchronous",
  "network-programming",
]
keywords = ["http3", "http", "web", "chitey", "framework"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "chitey"
path = "src/lib.rs"

[dependencies]
chitey-codegen = "0.2"
# chitey-router = "0.2"
chitey-server = "0.2"
# chitey-codegen = { path = "../chitey-codegen" }
# chitey-router = { path = "../chitey-router" }
# chitey-server = { path = "../chitey-server" }
async-trait.workspace = true
urlpattern.workspace = true
tokio.workspace = true
http = "0.2"
bytes = "1"
hyper = "0.14"

[features]
macros = []
