[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
chitey = { version = "0.2", features = ["macros"] }
# chitey = { path = "../chitey", features = ["macros"] }
http = "0.2"
bytes = "1.5"

[workspace]
